# lightspeed-photon

./: .gitignore  README.rst  pyproject.toml  requirements.txt  tox.ini
ansible_lightspeed/photon/: cli.py  client.py  logger.py  remote.py
ansible_lightspeed/photon/utils/: predictions_utils.py  test_predictions_utils.py
ansible_lightspeed_service_client/: __init__.py  client.py  types.py
ansible_lightspeed_service_client/api/ai/: ai_attributions_create.py  ai_completions_create.py  ai_feedback_create.py
ansible_lightspeed_service_client/api/check/: check_retrieve.py  check_status_retrieve.py
ansible_lightspeed_service_client/api/me/: me_retrieve.py
ansible_lightspeed_service_client/models/: __init__.py  action_enum.py  ansible_content_feedback.py  attribution.py  attribution_request.py  attribution_response.py  check_status_retrieve_response_200.py  completion_request.py  completion_response.py  feedback_request.py  inline_suggestion_feedback.py  metadata.py  trigger_enum.py  user.py
model_grpc_client/: exceptions.py  grpc_client.py
model_grpc_client/grpc_pb/: common_service_pb2.py  common_service_pb2_grpc.py  generation_pb2.py  generation_pb2_grpc.py  producer_types_pb2.py
samples/: test_ansible_netcommon.yaml  test_ansible_utils.yaml  test_ansible_windows.yaml  test_arista_eos.yaml  test_aws.yaml  test_awx.yaml  test_azure_vm.yaml  test_chocolatey.yaml  test_cisco_aci.yaml  test_cisco_asa.yaml  test_cisco_mso.yaml  test_cisco_nxos.yaml  test_digitalocean.yaml  test_f5networks.yaml  test_ibm_qradar.yaml  test_icinga_director.yaml  test_kubernetes.yaml  test_openstack_vm.yaml  test_openvswitch.yaml  test_orvit.yaml  test_podman.yaml  test_posix.yaml  test_sensu.yaml  test_vmware.yaml
samples/awx/: test_create_project.yaml
samples/awx/context/: add_host_to_awx_inventory.yaml
samples/builtin/: test_file_manipulation.yaml  test_package.yaml
samples/cloud/: test_aws.yaml  test_openstack.yaml
samples/cloud/context/: aws_long_context.yaml
tests/: test_cli.py
