[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lightspeed-photon"
description = "Prediction tests from Ansible Lightspeed"
readme = "README.rst"
authors = [{ name = "Ansible Lightspeed team" }]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "version"]
keywords = ["ansible", "test", "testing"]

[project.urls]
Homepage = "https://github.com/ansible/lightspeed-photon"

[project.optional-dependencies]
test = [
    "tox",
]

[project.scripts]
lightspeed-photon = "ansible_lightspeed.photon.cli:main"


[tool]

[tool.setuptools]
packages = ["ansible_lightspeed.photon"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "ansible_lightspeed.photon.__version__"}

[tool.black]
line-length = 100
fast = true
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "ISC", # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "S",  # bandit
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]
ignore = ["D100", "D104", "D203", "D213"]
